k8s/auth-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t-stores-auth-mongo
  template:
    metadata:
      labels:
        app: t-stores-auth-mongo
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mong-volume-claim
      containers:
        - name: t-stores-auth-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: t-stores-auth-mongo
  ports:
    - name: auth-mongo-expose
      protocol: TCP
      port: 27017
      targetPort: 27017
