k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t-stores-auth
  template:
    metadata:
      labels:
        app: t-stores-auth
    spec:
      containers:
        - name: t-stores-auth
          image: nhannt1905/t-stores-auth
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: t-stores-auth
  ports:
    - name: auth-expose
      protocol: TCP
      port: 4000
      targetPort: 4000
